--- a/app/bin/main/view/Game.fxml
+++ b/app/bin/main/view/Game.fxml
@@ -8,8 +8,7 @@
 <VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:id="timerContainer" alignment="CENTER" spacing="40" style="-fx-background-color: linear-gradient(to right, #0003a5, #b80000);" fx:controller="codenames.observers.GameView">
     <children>
         <ImageView fx:id="imageView" fitWidth="200" fitHeight="200"/>
-        <GridPane minHeight="400.0" fx:id="gridPane">
-        </GridPane>
+        <GridPane minHeight="400.0" fx:id="gridPane" alignment="CENTER"/>
         <Button fx:id="button"
                 onAction="#handleButton"
                 text="Play"
